# crfsuite-compliant-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  bench.sh  bench_compare.sh  ccc_mapping.toml
.github/workflows/: ci.yml
crates/crfsuite-cli/: Cargo.toml
crates/crfsuite-cli/src/: dump.rs  iwa.rs  learn.rs  main.rs  reader.rs  tag.rs
crates/crfsuite-core/: Cargo.toml  build.rs
crates/crfsuite-core/c_helpers/: vecexp_helper.c
crates/crfsuite-core/src/: dump.rs  model.rs  model_writer.rs  params.rs
crates/crfsuite-core/src/cqdb/: lookup3.rs  mod.rs
crates/crfsuite-core/src/crf1d/: context.rs  encode.rs  feature.rs  tag.rs
crates/crfsuite-core/src/train/: arow.rs  averaged_perceptron.rs  l2sgd.rs  mod.rs  passive_aggressive.rs
crates/crfsuite-core/tests/: cqdb_crossval.rs  dump_crossval.rs  model_writer_crossval.rs  vecexp_crossval.rs
crates/crfsuite-ffi/: Cargo.toml  build.rs
crates/crfsuite-ffi/src/: data.rs  dictionary.rs  error.rs  evaluation.rs  lib.rs  logging_shim.c  model.rs  params.rs  tagger.rs  trainer.rs
crates/crfsuite-sys/: Cargo.toml  build.rs
crates/crfsuite-sys/src/: lib.rs
crates/crfsuite-tests/: Cargo.toml
crates/crfsuite-tests/src/: lib.rs
crates/crfsuite-tests/tests/: conformance.rs
scripts/: ccc-crfsuite-audit.sh
src/: dataset.rs  dump.rs  lib.rs  model.rs  model_writer.rs  params.rs  quark.rs  rng.rs  types.rs  vecmath.rs
src/cqdb/: lookup3.rs  mod.rs
src/crf1d/: context.rs  encode.rs  feature.rs  mod.rs  tag.rs
src/train/: arow.rs  averaged_perceptron.rs  l2sgd.rs  lbfgs.rs  mod.rs  passive_aggressive.rs
test_data/: gen_bench_data.py  iwa_edge_fields.txt  iwa_edge_weights.txt  iwa_escaped_fields.txt  multi_sequence.txt  single_item.txt  test.txt  train.txt
tests/: conformance.rs  cqdb_crossval.rs  dump_crossval.rs  gecco_marginals.rs  model_writer_crossval.rs
