[package]
name = "crfsuite-compliant-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of CRFsuite (Conditional Random Fields) for labeling sequential data"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/crfsuite-rs"
keywords = ["crf", "conditional-random-fields", "machine-learning", "nlp", "sequence-labeling"]
categories = ["science", "text-processing", "algorithms"]

[lib]
name = "crfsuite_compliant_rs"
path = "src/lib.rs"

[[bin]]
name = "crfsuite-rs"
path = "src/bin/crfsuite-rs/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
libc = "0.2"
liblbfgs-sys = "0.1.3"
clap = { version = "4", features = ["derive"] }
