[package]
name = "crfsuite-compliant-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of CRFsuite (Conditional Random Fields) for labeling sequential data"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/crfsuite-compliant-rs"
keywords = ["crf", "conditional-random-fields", "machine-learning", "nlp", "sequence-labeling"]
categories = ["science", "text-processing", "algorithms"]
exclude = [
    "crfsuite/",
    "bench.sh",
    "bench_compare.sh",
    "CLAUDE.md",
    "TODO.txt",
    "test_data/bench_10k.txt",
    "test_data/gen_bench_data.py",
    "test_data/model_ap.bin",
    "test_data/model_arow.bin",
    "test_data/model_c_*.bin",
    "test_data/model_l2sgd.bin",
    "test_data/model_pa.bin",
    "test_data/model_rs.bin",
]

[lib]
name = "crfsuite_compliant_rs"
path = "src/lib.rs"

[[bin]]
name = "crfsuite-rs"
path = "src/bin/crfsuite-rs/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
tempfile = "3"

[dependencies]
liblbfgs-compliant-rs = "0.1.3"
clap = { version = "4", features = ["derive"], optional = true }
