[package]
name = "crfsuite-compliant-rs"
version = "0.2.1"
edition = "2021"
description = "Pure Rust implementation of CRFsuite (Conditional Random Fields) for labeling sequential data"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/crfsuite-compliant-rs"
keywords = ["crf", "machine-learning", "nlp", "sequence-labeling"]
categories = ["science", "text-processing", "algorithms"]
rust-version = "1.79"
include = [
    "src/**/*",
    "tests/**/*",
    "test_data/train.txt",
    "test_data/test.txt",
    "test_data/multi_sequence.txt",
    "test_data/single_item.txt",
    "test_data/model_c.bin",
    "test_data/iwa_edge_fields.txt",
    "test_data/iwa_edge_weights.txt",
    "test_data/iwa_escaped_fields.txt",
    "Cargo.toml",
    "LICENSE.md",
    "README.md",
]

[lib]
name = "crfsuite_compliant_rs"
path = "src/lib.rs"

[[bin]]
name = "crfsuite-rs"
path = "src/bin/crfsuite-rs/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
tempfile = "3"

[dependencies]
liblbfgs-compliant-rs = "0.1.3"
clap = { version = "4.6", features = ["derive"], optional = true }
