[package]
name = "crfsuite-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for CRFsuite"

[[bin]]
name = "crfsuite-rs"
path = "src/main.rs"

[dependencies]
crfsuite-ffi = { path = "../crfsuite-ffi" }
crfsuite-sys = { path = "../crfsuite-sys" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
